[package]
name = "just"
version = "0.1.0"
authors = ["Adam Winiarczuk <adamosca@gmail.com>"]
edition = "2018"

[build-dependencies]
octo = {path="../octo/octo"}

[dependencies]
# js scripting engine:
chakracore = {git="https://github.com/darfink/chakracore-rs", rev="93adef0a4ab297fbeaf228c403b8090e0979a1aa"}
octo_runtime = {path="../octo/octo_runtime"}
slotmap = "0.3.0"
nalgebra-glm ="0.4.0"
serde = {version="1.0", features=["derive"]}
rendy = {version="0.3", features=["vulkan", "rendy-shader", "rendy-mesh", "mesh-obj", "texture-image"]}
failure="0.1"
lazy_static = "1.0"
wavefront_obj = "6.0"
