[package]
name = "just"
version = "0.1.0"
authors = ["Adam Winiarczuk <adam.winiarczuk@gmail.com>"]
edition = "2018"

exclude = ["dev_app/*"]
build = "build.rs"

[build-dependencies]
octo = {path="../../octo/octo"}

[dependencies]
just_core = {path="../just_core"}
just_input = {path="../just_input"}
just_js = {path="../just_js"}
just_rendyocto = {path="../just_rendyocto"}

slotmap = "0.3.0"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
ron = "0.5.1"
failure="0.1"
lazy_static = "1.0"
wavefront_obj = "6.0"
stretch = "0.3.2"
schemars = "0.7.6"
