[package]
name = "just"
version = "0.1.0"
authors = ["Adam Winiarczuk <adam@winiarcz.uk>"]
edition = "2018"
default-run = "just"

[dependencies]
just_core = {path="../just_core"}
just_input = {path="../just_input"}
just_rend3d = {path="../just_rend3d"}
just_assets = {path="../just_assets"}

slotmap = "0.3.0"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
ron = "0.5.1"
failure="0.1.8"
lazy_static = "1.0"
wavefront_obj = "6.0"
stretch = "0.3.2"
schemars = "0.7.6"
