[package]
name = "just_core"
version = "0.1.0"
authors = ["Adam Winiarczuk <aw@instalod.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm ={version="0.4.0", features=["serde-serialize"]}
shrev = "1.1.1"
legion = "=0.2.1"
rendy = {git = "https://github.com/amethyst/rendy", rev="1980054d9efa3355eaa76163990e7127fb169295", features=["vulkan", "rendy-shader", "rendy-mesh", "mesh-obj", "texture-image"]}
