[package]
name = "just_core"
version = "0.1.0"
authors = ["Adam Winiarczuk <adam.winiarczuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
just_traits = {path = "../just_traits"}
# math library
nalgebra-glm ={version="0.4.0", features=["serde-serialize"]}
# ecs representing entire gameobject world
legion = "=0.2.1"
# rand used in math and scripting bindings
rand = "0.7"
# channels used for events
shrev = "1.1.1"
