[package]
name = "just_core"
version = "0.1.0"
authors = ["Adam Winiarczuk <adam@winiarcz.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# math library
glam = "0.20.0"
# ecs representing entire gameobject world
legion = "=0.2.1"
# rand used in math and scripting bindings
rand = "0.7"
# channels used for events
shrev = "1.1.1"
# serialization of all scene/object/prefabs stuff. Needed here for math primitives
serde = {version="1.0", features=["derive"]}
v8 = "0.41.0"