[package]
name = "just_input"
version = "0.1.0"
authors = ["Adam Winiarczuk <aw@instalod.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
just_traits = {"path"="../just_traits"}
just_core = {"path"="../just_core"}
