[package]
name = "just_input"
version = "0.1.0"
authors = ["Adam Winiarczuk <aw@instalod.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
just_core = {"path"="../just_core"}
# Only temporarily: until we move from rendy to pure winit + vulkan/gfx-hal/wgpu(?).
rendy = {git = "https://github.com/amethyst/rendy", rev="1980054d9efa3355eaa76163990e7127fb169295", features=["vulkan", "rendy-shader", "rendy-mesh", "mesh-obj", "texture-image"]}
