[package]
name = "just_rend3d"
version = "0.1.0"
authors = ["Adam Winiarczuk <adam@winiarcz.uk>"]
edition = "2021"

[dependencies]
just_core = {path="../just_core"}

# Linear algebra library
glam = "0.20.0"
# Renderer core
rend3 = { version = "^0.3.0"}
# Programmable render list that dictates how the scene renders
rend3-routine = { version = "^0.3.0"}
# Framework that deals with the event loop, setting up the renderer, and platform differences.
rend3-framework = { version = "^0.3.0"}
# windowing
winit = "0.26"