[package]
name = "just_rend3d"
version = "0.1.0"
authors = ["Adam Winiarczuk <adam@winiarcz.uk>"]
edition = "2021"

[dependencies]
just_core = {path="../just_core"}
just_assets = {path="../just_assets"}

# Linear algebra library
glam = "0.20.0"
# Renderer core
rend3 = { git="https://github.com/BVE-Reborn/rend3"}
# Programmable render list that dictates how the scene renders
rend3-routine = { git="https://github.com/BVE-Reborn/rend3"}
# windowing
winit = "0.26"
pollster = "0.2"
tobj = "2.0"