[package]
name = "just_v8js"
version = "0.1.0"
authors = ["Adam Winiarczuk <adam@winiarcz.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
just_core = {path="../just_core"}

serde = {version="1.0", features=["derive"]}
failure="0.1"
v8 = "0.41.0"