[package]
name = "just_wgpu"
version = "0.1.0"
authors = ["Adam Winiarczuk <adam@winiarcz.uk>"]
edition = "2021"

[dependencies]
just_core = {path="../just_core"}
just_assets = {path="../just_assets"}
just_input = {path="../just_input"}

wgpu = "0.16"
egui = "0.22"
egui-wgpu = "0.22"

# windowing
winit = "0.28"
pollster = "0.3"
tobj = "4.0"
env_logger = "0.10"
log = "0.4"
bytemuck = { version = "1.12", features = ["derive"]}
anyhow = "1.0"

# Load image
image = { version = "0.24", default-features = false, features = ["png", "jpeg"]}